# pipeworld

./: CHANGELOG  HACKING.md  IDEAS.md  LICENSE  README.md  TODO.md
native-example/shmif/: meson.build
native-example/shmif/src/: main.c
native-example/tui/: meson.build
native-example/tui/src/: pipeedit.c
pipeworld/: bindings.lua  cellmgmt.lua  commands.lua  config.lua  fsrv.lua  pipeworld.lua  row.lua  suppl.lua  timer.lua  wallpaper.lua  wm.lua
pipeworld/builtin/: keyboard.lua
pipeworld/cells/: adopt.lua  capture.lua  cli.lua  compose.lua  debug.lua  expression.lua  image.lua  listen.lua  target.lua  term.lua
pipeworld/cells/api/: template.lua
pipeworld/cells/api/cell/: autodelete.lua  color.lua  colorscheme.lua  hint.lua  input_label.lua  migrate.lua  mode.lua  opacity.lua  paste.lua  reset_timer.lua  share.lua  (+3 more)
pipeworld/cells/shared/: base.lua  fsrv.lua  input.lua  lexer.lua  lexer_test.lua  parser.lua  parser_test.lua  wayland.lua
pipeworld/devmaps/: template.lua.example
pipeworld/devmaps/keyboard/: README.md  default.lua
pipeworld/devmaps/themes/: template.lua.example
pipeworld/menus/: cell.lua  cell_hint.lua  cell_label.lua  cell_scale.lua  insert.lua  insert_row.lua  row.lua  row_scale.lua  row_target.lua  system.lua  target.lua
pipeworld/scripts/: autorun.lua
pipeworld/scripts/tests/: add_insert_delete.lua  capture.lua  listen.lua  pipe.lua  pipeedit.lua  wayland.lua
pipeworld/shaders/: shader.lua
pipeworld/shaders/ui/: cell.lua  popup.lua  row.lua
pipeworld/tools/: 3dnav.lua  flair.lua
pipeworld/ui/: popup.lua  text_input.lua
(+26 files in other folders)
